[fa] update from Pootle (firefox)

--- a/fa/browser/branding/official/brand.properties
+++ b/fa/browser/branding/official/brand.properties
@@ -6,10 +6,10 @@ brandShortName=فایرفاکس
 brandFullName=موزیلا فایرفاکس
 vendorShortName=موزیلا
 
-homePageSingleStartMain=صفحه‌ شروع فایرفاکس، سریع همراه با جست‌و‌جو
-homePageImport=وارد کردن صفحه‌ی اصلی از %S
+homePageSingleStartMain=صفحه‌ شروع فایرفاکس، یک صفحه خانگی سریع با امکان جست‌و‌جو\u0020
+homePageImport=صفحه خانگی خود را از %S وارد کنید
 
-homePageMigrationPageTitle=انتخاب صفحه‌‌ی اصلی
-homePageMigrationDescription=لطفا صفحه‌ی اصلی مورد نظر خود را انتخاب کنید:
+homePageMigrationPageTitle=انتخاب صفحه‌‌ی خانگی
+homePageMigrationDescription=لطفا صفحه‌ی خانگی مورد نظر خود را انتخاب کنید:
 
 syncBrandShortName=همگام‌سازی
