--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -99,11 +99,6 @@ popupShowPopupPrefix=نمایش «‪%S‬»
 badContentBlocked.blocked.message=%S محتوای صفحه را مسدود میکند.
 badContentBlocked.notblocked.message=%S  اصلا محتوای صفحه را مسدود نمیکند.
 
-# missing plugin installer
-installPlugin.message = آیا میخواهید که افزونه مورد نیاز برای نمایش محتوای چند رسانه ای این صفحه را نصب نمایید؟
-installPlugin.button.label=نصب %S
-installPlugin.button.accesskey=ن
-
 crashedpluginsMessage.title=متصل‌شوندهٔ %S فروپاشیده است.
 crashedpluginsMessage.learnMore=بیشتر بدانید…
 
@@ -416,13 +411,18 @@ getUserMedia.sharingApplication.message = شما هم اکنون یک برنام
 getUserMedia.sharingScreen.message = شما هم اکنون صفحه نمایش خود را با این صفحه به اشتراک گذاشته اید.
 getUserMedia.sharingWindow.message = شما هم اکنون یک پنجره را با این صفحه به اشتراک گذاشته اید.
 
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -436,3 +436,9 @@ getUserMedia.sharingWindow.message = شما هم اکنون یک پنجره را
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
 # be replaced with a hyperlink containing the text defined in customizeTips.tip0.learnMore.
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartBrowserButton.label = راه‌اندازی مجدد %S
