--- a/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -90,8 +90,12 @@ quit-button.tooltiptext.linux2 = خروج %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 
-panic-button.label = فراموش کردن
-panic-button.tooltiptext = فراموش کردن بعضی تاریخچه مرورها
 
-loop-call-button.label = دعوت کسی به صحبت
-loop-call-button.tooltiptext = دعوت کسی به صحبت
+
+panic-button.label = فراموش کردن
+panic-button.tooltiptext = فراموش کردن بعضی  تاریخچه مرورها
+
+web-apps-button.label = برنامه‌ها
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
