--- a/fa/browser/chrome/browser/devtools/sourceeditor.properties
+++ b/fa/browser/chrome/browser/devtools/sourceeditor.properties
@@ -21,6 +21,7 @@ findCmd.promptTitle=پیدا کردن…
 # LOCALIZATION NOTE  (findCmd.promptMessage): This is the message shown when
 # the user wants to search for a string in the code. You can
 # access this feature by pressing Ctrl-F on Windows/Linux or Cmd-F on Mac.
+findCmd.promptMessage=جستجو برای:
 
 # LOCALIZATION NOTE  (gotoLineCmd.promptTitle): This is the dialog title used
 # when the user wants to jump to a specific line number in the code. You can
@@ -29,6 +30,7 @@ findCmd.promptTitle=پیدا کردن…
 # LOCALIZATION NOTE  (gotoLineCmd.promptMessage): This is the message shown when
 # the user wants to jump to a specific line number in the code. You can
 # access this feature by pressing Ctrl-J on Windows/Linux or Cmd-J on Mac.
+gotoLineCmd.promptMessage=پریدن به خط شماره:
 
 # LOCALIZATION NOTE  (annotation.breakpoint.title): This is the text shown in
 # front of any breakpoint annotation when it is displayed as a tooltip in one of
@@ -46,9 +48,11 @@ findCmd.promptTitle=پیدا کردن…
 # LOCALIZATION NOTE  (autocompletion.docsLink): This is the text shown on
 # the link inside of the documentation popup.  If you type 'document' in Scratchpad
 # then press Shift+Space you can see the popup.
+autocompletion.docsLink=اسناد
 
 # LOCALIZATION NOTE  (autocompletion.notFound): This is the text shown in
 # the documentation popup if Tern fails to find a type for the object.
+autocompletion.notFound=پیدا نشد
 
 # LOCALIZATION NOTE  (jumpToLine.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to jump to
@@ -57,6 +61,7 @@ findCmd.promptTitle=پیدا کردن…
 # LOCALIZATION NOTE  (toggleComment.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to either
 # comment or uncomment selected lines in the editor.
+toggleComment.commandkey=/
 
 # LOCALIZATION NOTE  (indentLess.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to reduce
@@ -64,6 +69,7 @@ findCmd.promptTitle=پیدا کردن…
 # the Toolbox to switch between tools so we disable it.
 #
 # DO NOT translate this key without proper synchronization with toolbox.dtd.
+indentLess.commandkey=]
 
 # LOCALIZATION NOTE  (indentMore.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to increase
@@ -71,12 +77,15 @@ findCmd.promptTitle=پیدا کردن…
 # the Toolbox to switch between tools
 #
 # DO NOT translate this key without proper synchronization with toolbox.dtd.
+indentMore.commandkey=[
 
 # LOCALIZATION NOTE  (moveLineUp.commandkey): This is the key to use to move
 # the selected lines up.
+moveLineUp.commandkey=Alt-Up
 
 # LOCALIZATION NOTE  (moveLineDown.commandkey): This is the key to use to move
 # the selected lines down.
+moveLineDown.commandkey=Alt-Down
 
 # LOCALIZATION NOTE  (autocomplete.commandkey): This is the key to use
 # in conjunction with Ctrl for autocompletion.
