--- a/fa/browser/chrome/browser/devtools/webconsole.properties
+++ b/fa/browser/chrome/browser/devtools/webconsole.properties
@@ -205,3 +205,4 @@ remoteWebConsolePromptMessage=نام میزبان و شمارۀ درگاه را 
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.key=کلید
