--- a/fa/browser/installer/nsisstrings.properties
+++ b/fa/browser/installer/nsisstrings.properties
@@ -52,6 +52,7 @@ BROWSE_BUTTON=&مرور…
 DEST_FOLDER=محل مقصد
 
 INSTALLING_LABEL=در حال نصب $BrandShortName…
+UPGRADING_LABEL=در حال ارتقای $BrandShortName…
 
 SELECT_FOLDER_TEXT=‫محلی را که می‌خواهید $BrandShortName در آن نصب شود انتخاب کنید:‏
 
