--- a/fa/browser/pdfviewer/viewer.properties
+++ b/fa/browser/pdfviewer/viewer.properties
@@ -40,10 +40,26 @@ bookmark.title=نمای فعلی (کپی کن، یا در پنجرۀ دیگری 
 bookmark_label=نمای فعلی
 
 # Secondary toolbar and context menu
+first_page.title=برو به اولین صفحه
+first_page.label=برو یه اولین صفحه
+first_page_label=برو به اولین صفحه
+last_page.title=برو به آخرین صفحه
+last_page.label=برو به آخرین صفحه
+last_page_label=برو به آخرین صفحه
+page_rotate_ccw.title=چرخش پاد ساعتگرد
+page_rotate_ccw.label=چرخش پاد ساعتگرد
 
 
 # Document properties dialog box
 document_properties_title=عنوان:
+document_properties_author=نویسنده:
+document_properties_subject=موضوع:
+document_properties_keywords=کلیدواژه‌ها:
+document_properties_creation_date=تاریخ ایجاد:
+document_properties_modification_date=تاریخ ویرایش:
+document_properties_date_string={{date}}، {{time}}
+document_properties_creator=ایجاد کننده:
+document_properties_producer=ایجاد کننده PDF:
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
