--- a/fa/browser/chrome/browser/devtools/debugger.properties
+++ b/fa/browser/chrome/browser/devtools/debugger.properties
@@ -105,6 +105,7 @@ stepOutTooltip=قدم به خارج (%S)
 # LOCALIZATION NOTE (*Events): The text to display in the events tab for
 # each group of sub-level event entries.
 audioEvents=صوت
+deviceEvents=دستگاه
 
 # LOCALIZATION NOTE (blackBoxCheckboxTooltip): The tooltip text to display when
 # the user hovers over the checkbox used to toggle black boxing its associated
