--- a/fa/browser/chrome/browser/devtools/scratchpad.properties
+++ b/fa/browser/chrome/browser/devtools/scratchpad.properties
@@ -27,15 +27,21 @@ openFile.title=باز کردن پرونده
 
 # LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
 # open fails.
+openFile.failed=در  در خواندن فایل ناموفق بود.
+
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
+clearRecentMenuItems.label=پاک کردن آیتم‌ها
 
 # LOCALIZATION NOTE  (saveFileAs): This is the file picker title, when you save
 # a file in Scratchpad.
 
 # LOCALIZATION NOTE  (saveFile.failed): This is the message displayed when file
 # save fails.
+saveFile.failed=ذخیره‌سازی فایل ناموفق بود.
 
 # LOCALIZATION NOTE  (confirmClose): This is message in the prompt dialog when
 # you try to close a scratchpad with unsaved changes.
@@ -62,6 +68,11 @@ openFile.title=باز کردن پرونده
 
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = سطر %1$S، ستون %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
