--- a/fa/browser/chrome/browser/devtools/storage.properties
+++ b/fa/browser/chrome/browser/devtools/storage.properties
@@ -42,12 +42,15 @@
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=کوکی‌ها
+tree.labels.localStorage=فضای ذخیره سازی محلی
+tree.labels.indexedDB=پایگاه داده‌ی نشانه گذاری شده
 
 # LOCALIZATION NOTE (table.headers.*.*):
 # These strings are the header names of the columns in the Storage Table for
 # each type of storage available through the Storage Tree to the side.
 table.headers.cookies.name=نام
 table.headers.cookies.path=مسیر
+table.headers.cookies.creationTime=ساخته شده در
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
@@ -58,9 +61,15 @@ table.headers.cookies.path=مسیر
 # This string is used in the header for the column which denotes whether a
 # cookie is a domain cookie only or not.
 
+table.headers.localStorage.name=کلید
 
+table.headers.sessionStorage.name=کلید
 
+table.headers.indexedDB.name=کلید
+table.headers.indexedDB.db=نام پایگاه داده
+table.headers.indexedDB.origin=اصل
 table.headers.indexedDB.version=نسخه
+table.headers.indexedDB.keyPath=کلید
 
 # LOCALIZATION NOTE (label.expires.session):
 # This string is displayed in the expires column when the cookie is Session
