--- a/fa/browser/chrome/browser/devtools/styleeditor.properties
+++ b/fa/browser/chrome/browser/devtools/styleeditor.properties
@@ -31,17 +31,21 @@
 # LOCALIZATION NOTE  (error-load): This is shown when loading fails.
 
 # LOCALIZATION NOTE  (error-save): This is shown when saving fails.
+error-save=برگ شیوه قادر به ذخیره شدن نیست.
 
 # LOCALIZATION NOTE  (error-compressed): This is shown when we can't show
 # coverage information because the css source is compressed.
 
 # LOCALIZATION NOTE  (importStyleSheet.title): This is the file picker title,
 # when you import a style sheet into the Style Editor.
+importStyleSheet.title=وارد کردن برگ شیوه
 
 # LOCALIZATION NOTE  (importStyleSheet.filter): This is the *.css filter title
+importStyleSheet.filter=فایل‌های CSS
 
 # LOCALIZATION NOTE  (saveStyleSheet.title): This is the file picker title,
 # when you save a style sheet from the Style Editor.
+saveStyleSheet.title=ذخیره کردن برگ شیوه
 
 # LOCALIZATION NOTE  (saveStyleSheet.filter): This is the *.css filter title
 
