--- a/fa/browser/chrome/browser/devtools/webide.properties
+++ b/fa/browser/chrome/browser/devtools/webide.properties
@@ -4,9 +4,14 @@
 
 
 
+mainProcess_label=پردازش اصلی
 
 
 
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=در حال بار کردن…
 
 # These messages appear in a notification box when an error occur.
 
