--- a/fa/browser/chrome/browser/places/places.properties
+++ b/fa/browser/chrome/browser/places/places.properties
@@ -56,16 +56,17 @@ OrganizerQueryDownloads=بارگیری‌ها
 OrganizerQueryAllBookmarks=همهٔ نشانک‌ها
 OrganizerQueryTags=برچسب‌ها
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=برچسب
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=نشانک
+switchtabResultLabel=جدول‌بندی
+keywordResultLabel=کلیدواژه
+searchengineResultLabel=جست‌وجو
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
