[hi-IN] update from Pootle (firefox)

--- a/hi-IN/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hi-IN/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,12 @@ quit-button.tooltiptext.linux2 = बाहर निकलें %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = बाहर निकलें %1$S (%2$S)
 
+
+
 panic-button.label = भूलें
 panic-button.tooltiptext = कुछ ब्राउज़िंग इतिहास के बारे में भूल गए
 
-loop-call-button.label = बात करने के लिए किसी को आमंत्रित करें
-loop-call-button.tooltiptext = बात करने के लिए किसी को आमंत्रित करें
+web-apps-button.label = अनुप्रयोग
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
