[ro] update from Pootle (firefox)

--- a/ro/browser/chrome/browser/browser.properties
+++ b/ro/browser/chrome/browser/browser.properties
@@ -74,6 +74,7 @@ lwthemeInstallRequest.allowButton.accesskey=P
 
 lwthemePostInstallNotification.message=A fost instalată o temă nouă.
 lwthemePostInstallNotification.undoButton=Anulează
+lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Gestionează temele…
 lwthemePostInstallNotification.manageButton.accesskey=m
 
@@ -112,6 +113,8 @@ crashedpluginsMessage.learnMore=Află mai multe…
 # a local host page, by the time the DNS request recognizes it, we have already
 # loaded a search page for the given word.  An infobar then asks to the user
 # whether he rather wanted to visit the host.  %S is the recognized host.
+keywordURIFixup.dismiss=Nu, mulțumesc
+keywordURIFixup.dismiss.accesskey=N
 
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
@@ -263,6 +266,7 @@ newWindowButton.tooltip=Deschide o fereastră nouă (%S)
 # New Tab button tooltip
 # LOCALIZATION NOTE (newTabButton.tooltip):
 # %S is the keyboard shortcut for "New Tab"
+newTabButton.tooltip=Deschide o filă nouă (%S)
 
 # Offline web applications
 offlineApps.available=Acest sait (%S) se oferă să stocheze date pe calculatorul dumneavoastră pentru a putea fi accesat offline.
@@ -434,6 +438,9 @@ webapps.requestInstall = Doriți să instalați "%1$S" de la acest sait (%2$S)?
 webapps.install.success = Aplicație instalată
 webapps.install.inprogress = Instalare în desfășurare
 webapps.uninstall = Dezinstalează
+webapps.uninstall.accesskey = U
+webapps.doNotUninstall = Nu dezinstala
+webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 webapps.requestUninstall = Doriți să dezinstalați „%1$S”?
 
@@ -493,7 +500,9 @@ identity.loggedIn.signOut.accessKey = o
 #  %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.shareCamera.message = Doriți să partajați camera cu %S?
 getUserMedia.shareMicrophone.message = Doriți să partajați microfonul cu %S?
+getUserMedia.shareScreen.message = Doriți să partajați ecranul cu %S?
 getUserMedia.shareCameraAndMicrophone.message = Doriți să partajați camera și microfonul dumneavoastră cu %S?
+getUserMedia.shareScreenAndMicrophone.message = Doriți să partajați microfonul și ecranul cu %S?
 getUserMedia.noVideo.label = Niciun video
 getUserMedia.noAudio.label = Niciun audio
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
@@ -516,6 +525,7 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = În prezent partajați camera cu această pagină.
 getUserMedia.sharingMicrophone.message2 = În prezent partajați microfonul cu această pagină.
 getUserMedia.sharingCameraAndMicrophone.message2 = În prezent partajați camera și microfonul cu această pagină.
+getUserMedia.sharingScreen.message = În prezent partajați ecranul cu această pagină.
 getUserMedia.sharingWindow.message = În prezent partajați o fereastră cu această pagină.
 getUserMedia.continueSharing.label = Continuă partajarea
 getUserMedia.continueSharing.accesskey = C
@@ -538,6 +548,8 @@ getUserMedia.stopSharing.accesskey = p
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
 # %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (camera)
+getUserMedia.sharingMenuMicrophone = %S (microfon)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 
