--- a/ro/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ro/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,13 +97,18 @@ quit-button.tooltiptext.linux2 = Închidere %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Închidere %1$S (%2$S)
 
+loop-call-button2.label = Pornește o conversație
+loop-call-button2.tooltiptext = Pornește o conversație
 
 social-share-button.label = Împărtășește această pagină
 social-share-button.tooltiptext = Împărtășește această pagină
 
+panic-button.label = Uită
 
 web-apps-button.label = Aplicații
+web-apps-button.tooltiptext = Descoperă aplicații
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = Deschide WebIDE
