--- a/ro/browser/chrome/browser/downloads/downloads.properties
+++ b/ro/browser/chrome/browser/downloads/downloads.properties
@@ -54,6 +54,7 @@ stateDirty=Blocat: poate conține un virus sau programe spion
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Sigur doriți să deblocați acest fișier?
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
