--- a/ro/browser/chrome/browser/loop/loop.properties
+++ b/ro/browser/chrome/browser/loop/loop.properties
@@ -194,3 +194,4 @@ rooms_leave_button_label=Leave
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_new_room_button_label=Pornește o conversație
