--- a/ro/dom/chrome/accessibility/AccessFu.properties
+++ b/ro/dom/chrome/accessibility/AccessFu.properties
@@ -7,12 +7,51 @@ screenReaderStarted = Cititor de ecran pornit
 screenReaderStopped = Cititor de ecran oprit
 
 # Roles
+menubar        =       bara de meniu
+scrollbar      =       bara de derulare
+alert          =       alertă
+menupopup      =       meniu popup
+document       =       document
+pane           =       panou
+dialog         =       dialog
+separator      =       separator
+toolbar        =       bară de unelte
+statusbar      =       bară de stare
 table          =       tabel
+columnheader   =       antet de coloană
+rowheader      =       antet de rând
+column         =       coloană
+row            =       rând
+cell           =       celulă
 link           =       legătură
+list           =       listă
+listitem       =       element din listă
+outline        =       evidențiază
+outlineitem    =       evidențiază obiect
+pagetab        =       filă
+propertypage   =       proprietate pagină
+graphic        =       grafic
 pushbutton     =       buton
+slider         =       glisor
+animation      =       animație
+equation       =       ecuație
+buttonmenu     =       buton meniu
+whitespace     =       spațiu liber
+pagetablist    =       lista de file
+checkmenuitem  =       verifică obiectul din meniu
+label          =       etichetă
 passwordtext   =       parolă text
+radiomenuitem  =       element meniu radio
+textcontainer  =       container de text
+header         =       antet
+footer         =       subsol
+paragraph      =       paragraf
+entry          =       intrare
+caption        =       titlu
+heading        =       antet
 imagemap       =       harta imagine
 figure         =       figură
+term           =       termen
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       zonă text
@@ -123,11 +162,22 @@ quicknav_Table       = Tabele
 quicknav_Checkbox    = Casete selectare
 
 # Shortened role names for braille
+paneAbbr           =       panou
+dialogAbbr         =       dialog
+separatorAbbr      =       separator
+toolbarAbbr        =       bară de unelte
+statusbarAbbr      =       bară de stare
 tableAbbr          =       tbl
+columnheaderAbbr   =       antet de coloană
+rowheaderAbbr      =       antet de rând
+columnAbbr         =       coloană
 linkAbbr           =       leg
+listAbbr           =       listă
 pushbuttonAbbr     =       but
 passwordtextAbbr   =       parolatxt
 imagemapAbbr       =       imgmap
+gridcellAbbr       =       rețea celule
+noteAbbr           =       notă
 figureAbbr         =       fig
 textareaAbbr       =       txtarea
 
@@ -141,3 +191,7 @@ tblColumnInfoAbbr = #1c;#1c
 tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
 
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
