--- a/ro/dom/chrome/dom/dom.properties
+++ b/ro/dom/chrome/dom/dom.properties
@@ -143,7 +143,7 @@ ShowModalDialogWarning=Use of window.showModalDialog() is deprecated. Use window
 # LOCALIZATION NOTE: Do not translate "window._content" or "window.content"
 Window_ContentWarning=window._content este descurajat.   Utilizați window.content în schimb.
 # LOCALIZATION NOTE: Do not translate "XMLHttpRequest"
-SyncXMLHttpRequestWarning=HTMLHttpReqest sincronic pe firul de execuție principal este descurajat din cauza efectelor dăunătoare asupra experienței utilizatorului final. Pentru mai mult ajutor, accesați http://xhr.spec.whatwg.org/
+SyncXMLHttpRequestWarning=HTMLHttpReqest sincron pe firul de execuție principal este descurajat din cauza efectelor negative asupra experienței utilizatorului final. Pentru mai mult ajutor accesați http://xhr.spec.whatwg.org/
 ImplicitMetaViewportTagFallback=Nicio etichetă meta-viewport găsită. Specificați explicit una care să prevină modificări comportamentale neașteptate în versiunile viitoare. Pentru mai mult ajutor, accesați: https://developer.mozilla.org/en/docs/Mozilla/Mobile/Viewport_meta_tag
 # LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
 DataContainerEventWarning=Utilizarea DataContainerEvent este învechită. Utilizați CustomEvent în schimb.
