--- a/ro/dom/chrome/layout/css.properties
+++ b/ro/dom/chrome/layout/css.properties
@@ -21,6 +21,7 @@ PEGatherMediaEOF=sfârșitul listei media în regula @import sau @media
 PEGatherMediaNotComma=Se aștepta „,” în lista media, dar s-a găsit „%1$S”.
 PEGatherMediaNotIdent=Se aștepta un identificator în lista media, dar s-a găsit „%1$S”.
 PEGatherMediaReservedMediaType=Found reserved keyword '%1$S' when looking for media type.
+PEParseSourceSizeListNotComma=Se aștepta „,” după valoare, dar s-a găsit „%1$S”.
 PEImportNotURI=Se aștepta URI în regula @import, dar s-a găsit „%1$S”.
 PEImportBadURI=URI nevalid în regula @import: „%1$S”.
 PEImportUnexpected=S-a găsit „%1$S” neașteptat în @import.
@@ -43,6 +44,9 @@ PESelectorListExtraEOF=„,” sau „{”
 PESelectorListExtra=Se aștepta „,” sau „{”, dar s-a găsit „%1$S”.
 PESelectorGroupNoSelector=Se aștepta un selector.
 PESelectorGroupExtraCombinator=Combinator în plus.
+PECounterStyleNotIdent=Identificator solicitat pentru numele regulii @counter-style.
+PECounterStyleBadBlockStart=Se aștepta „{” pentru a începe regula @counter-style dar s-a găsit „%1$S”.
+PEUnknownCounterDesc=Descriere necunoscută „%1$S” în regula @counter-style.
 PEClassSelEOF=nume clasă
 PEClassSelNotIdent=Se aștepta un identificator pentru selectorul de clasă, dar s-a găsit „%1$S”.
 PETypeSelEOF=tip element
