--- a/ro/dom/chrome/layout/htmlparser.properties
+++ b/ro/dom/chrome/layout/htmlparser.properties
@@ -125,3 +125,4 @@ errSelfClosing=Sintaxă de închidere („/>”) folosită pe un element HTML ca
 errNoCheckUnclosedElementsOnStack=Elemente neînchise pe stivă.
 errEndTagDidNotMatchCurrentOpenElement=Eticheta de sfârșit „%1$S” nu se potrivește cu numele elementului care este deschis acum („%2$S)”.
 errEndTagViolatesNestingRules=Tagul de închidere „%1$S” nu respectă regulile de imbricare.
+errEndWithUnclosedElements=S-a găsit sfârșitul de etichetă „%1$S”, dar erau elemente deschise.
