--- a/ro/security/manager/chrome/pipnss/nsserrors.properties
+++ b/ro/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,10 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL a primit date invalide de la extensia N
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Funcția SSL nu este suporată de conexiunile SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Funcția SSL nu este suportată de servere.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Funcția SSL nu este suportată de clienți.
+SSL_ERROR_INVALID_VERSION_RANGE=Intervalul versiunii SSL nu este valid.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL a primit un mesaj neașteptat de negociere de tip Hello Request.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL a primit un mesaj de negociere neașteptat de tip Certificate Status.
+SSL_ERROR_DIGEST_FAILURE=Funcția digest a eșuat.
 SEC_ERROR_IO=A intervenit o eroare I/O în timpul autorizării securizate.
 SEC_ERROR_LIBRARY_FAILURE=eroare a bibliotecii de securitate.
 SEC_ERROR_BAD_DATA=biblioteca de securitate: s-au primit date greșite.
