--- a/ro/security/manager/chrome/pipnss/pipnss.properties
+++ b/ro/security/manager/chrome/pipnss/pipnss.properties
@@ -322,6 +322,7 @@ CertInfoValid=Valabil
 CertInfoFrom=de la
 CertInfoTo=la
 CertInfoPurposes=Scopuri
+CertInfoEmail=Email
 CertInfoStoredIn=Stocat în:
 P12DefaultNickname=Certificat importat
 VerifyExpired=<Expirat>
