--- a/ro/toolkit/chrome/global/aboutSupport.properties
+++ b/ro/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = Parametrii ClearType nu au fost găsiți
 adapterDescription = Descrierea adaptorului
 adapterVendorID = ID furnizor
 adapterDeviceID = ID dispozitiv
+adapterSubsysID = ID subsys
 adapterDrivers = Drivere pentru adaptor
 adapterRAM = RAM pentru adaptor
 driverVersion = Versiune driver
@@ -71,6 +72,7 @@ driverDate = Dată driver
 adapterDescription2 = Descriere adaptor (GPU #2)\u00A0
 adapterVendorID2 = ID vânzător (GPU #2)\u00A0
 adapterDeviceID2 = ID dispozitiv (GPU #2)
+adapterSubsysID2 = ID subsys (GPU #2)
 adapterDrivers2 = Drivere adaptor (GPU #2)
 adapterRAM2 = RAM adaptor (GPU #2)
 driverVersion2 = Versiune driver (GPU #2)
