--- a/ro/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/ro/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -57,6 +57,7 @@ notification.installError=A apărut o eroare la instalarea %1$S.
 notification.installError.retry=Încearcă din nou
 notification.installError.retry.tooltip=Încercați să descărcați și să instalați din nou acest supliment
 #LOCALIZATION NOTE (notification.openH264Pending) OpenH264 will be automatically installed later.
+notification.openH264Pending=Va fi instalat în scurt timp.
 
 #LOCALIZATION NOTE (contributionAmount2) %S is the currency amount recommended for contributions
 contributionAmount2=Donație propusă: %S
@@ -99,6 +100,7 @@ details.notification.uninstall=%1$S va fi dezinstalat după repornirea %2$S.
 #LOCALIZATION NOTE (details.notification.upgrade) %1$S is the add-on name, %2$S is brand name
 details.notification.upgrade=%1$S va fi actualizat după repornirea %2$S.
 #LOCALIZATION NOTE (details.notification.openH264Pending) OpenH264 will be automatically installed later.
+details.notification.openH264Pending=Va fi instalat în scurt timp.
 
 # LOCALIZATION NOTE (details.experiment.time.daysRemaining):
 # Semicolon-separated list of plural forms.
