--- a/ro/webapprt/webapprt/overrides/dom.properties
+++ b/ro/webapprt/webapprt/overrides/dom.properties
@@ -34,9 +34,13 @@ FormValidationPatternMismatch=Please match the requested format.
 # LOCALIZATION NOTE (FormValidationPatternMismatchWithTitle): %S is the (possibly truncated) title attribute value.
 FormValidationPatternMismatchWithTitle=Please match the requested format: %S.
 # LOCALIZATION NOTE (FormValidationNumberRangeOverflow): %S is a number.
+FormValidationNumberRangeOverflow=Vă rugăm să selectați o valoare care este mai mică decât %S.
 # LOCALIZATION NOTE (FormValidationDateRangeOverflow): %S is a date.
+FormValidationDateRangeOverflow=Vă rugăm să selectați o valoare care nu este mai mică decât %S.
 # LOCALIZATION NOTE (FormValidationTimeRangeOverflow): %S is a time.
+FormValidationTimeRangeOverflow=Vă rugăm să selectați o valoare care nu este mai mică decât %S.
 # LOCALIZATION NOTE (FormValidationNumberRangeUnderflow): %S is a number.
+FormValidationNumberRangeUnderflow=Vă rugăm să selectați o valoare care nu este mai mică decât %S.
 # LOCALIZATION NOTE (FormValidationDateRangeUnderflow): %S is a date.
 # LOCALIZATION NOTE (FormValidationTimeRangeUnderflow): %S is a time.
 # LOCALIZATION NOTE (FormValidationStepMismatch): both %S can be a number, a date or a time.
@@ -143,6 +147,6 @@ ShowModalDialogWarning=Use of window.showModalDialog() is deprecated. Use window
 # LOCALIZATION NOTE: Do not translate "window._content" or "window.content"
 Window_ContentWarning=window._content este descurajat. Utilizați window.content în schimb.
 # LOCALIZATION NOTE: Do not translate "XMLHttpRequest"
-SyncXMLHttpRequestWarning=HTMLHttpReqest sincronic pe firul de execuție principal este descurajat din cauza efectelor dăunătoare asupra experienței utilizatorului final. Pentru mai mult ajutor, accesați http://xhr.spec.whatwg.org/
+SyncXMLHttpRequestWarning=HTMLHttpReqest sincron pe firul de execuție principal este descurajat din cauza efectelor negative asupra experienței utilizatorului final. Pentru mai mult ajutor accesați http://xhr.spec.whatwg.org/
 # LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
 DataContainerEventWarning=Utilizarea DataContainerEvent este învehcită. Utilizați CustomEvent în schimb.
