--- a/ro/browser/chrome/browser/places/places.properties
+++ b/ro/browser/chrome/browser/places/places.properties
@@ -84,6 +84,7 @@ tagResultLabel=Etichetă
 bookmarkResultLabel=Semn de carte
 switchtabResultLabel=Tab
 keywordResultLabel=Cuvânt cheie
+searchengineResultLabel=Căutare
 
 
 # LOCALIZATION NOTE (lockPrompt.text)
