--- a/ro/dom/chrome/appstrings.properties
+++ b/ro/dom/chrome/appstrings.properties
@@ -5,6 +5,7 @@
 malformedURI=Adresa URL nu este validă și nu poate fi încărcată.
 fileNotFound=Nu se găsește fișierul %S. Vă rugăm verificați locul fișierului și încercați din nou.
 dnsNotFound=Nu s-a putut găsi %S. Vă rugăm verificați numele și încercați din nou.
+unknownProtocolFound=Unul din următoarele (%S) nu este un protocol înregistrat sau nu este permis în acest context.
 connectionFailure=Conexiunea a fost refuzată când se încerca contactarea %S.
 netInterrupt=Conexiunea cu %S s-a întrerupt. Este posibil să se fi transferat ceva date.
 netTimeout=Timpul prestabilit pentru accesarea %S a expirat.
