--- a/ro/dom/chrome/plugins.properties
+++ b/ro/dom/chrome/plugins.properties
@@ -20,3 +20,5 @@ mimetype_label=Tip MIME
 description_label=Descriere
 suffixes_label=Sufixe
 
+openH264_name=Codecul video OpenH264 este oferit de Cisco Systems, Inc.
+openH264_description=Revizionați videoclipul web și utilizați chaturile video.
