--- a/ro/toolkit/chrome/global/charsetMenu.properties
+++ b/ro/toolkit/chrome/global/charsetMenu.properties
@@ -64,6 +64,7 @@ ISO-8859-2.key   =       l
 ISO-8859-2       = Central europeană (ISO)
 
 # Chinese, Simplified
+gbk.bis.key      =          S
 gbk.bis          = Chineză simplificată
 
 # Chinese, Traditional
