--- a/ro/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/ro/toolkit/chrome/global/devtools/styleinspector.properties
@@ -42,6 +42,7 @@ rule.inheritedFrom=Moștenește de la %S
 # link for CSS rules that were loaded from a user agent style sheet.
 # These styles will not be editable, and will only be visible if the
 # devtools.inspector.showUserAgentStyles pref is true.
+rule.userAgentStyles=(agent de utilizator)
 
 # LOCALIZATION NOTE (rule.pseudoElement): Shown for CSS rules
 # pseudo element header
