--- a/ro/toolkit/chrome/global/resetProfile.properties
+++ b/ro/toolkit/chrome/global/resetProfile.properties
@@ -8,3 +8,5 @@
 resetUnusedProfile.message=Se pare că nu ați mai pornit %S de ceva vreme. Doriți să-l curățați ca nou, pentru o nouă experiență? Și apropo, bine ați revenit!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Resetează %S…
+refreshProfile.resetButton.accesskey=e
