--- a/ro/webapprt/webapprt/webapp.properties
+++ b/ro/webapprt/webapprt/webapp.properties
@@ -42,8 +42,12 @@ webapps.install.install=Instalare aplicație
 webapps.install.dontinstall=Nu instala
 # LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
 # of the webapp being uninstalled.
+webapps.uninstall.title=Dezinstalează %S
 # LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
 # name of the webapp being uninstalled.
+webapps.uninstall.description=Doriți să dezinstalați %S?
+webapps.uninstall.uninstall=Dezinstalare aplicație
+webapps.uninstall.dontuninstall=Nu dezinstala
 
 paymentDialog.title=Plată
 paymentDialog.message=Care furnizor de servicii de plată doriți să îl utilizați?
