[sv-SE] update from Pootle (firefox)

--- a/sv-SE/netwerk/necko.properties
+++ b/sv-SE/netwerk/necko.properties
@@ -38,3 +38,4 @@ PhishingAuthAccept=Jag förstår och kommer att vara vaksam
 SuperfluousAuth=Du kommer att logga in på platsen ”%1$S” med användarnamnet ”%2$S”, men webbplatsen kräver ingen autentisering. Detta kan vara ett försök att lura dig.\n\nÄr ”%1$S” den webbplats du vill besöka?
 AutomaticAuth=Du kommer att logga in på platsen ”%1$S” med användarnamnet ”%2$S”.
 
+TrackingUriBlocked=Resursen på "%1$S" blockerades eftersom spårningsskydd är aktiverat.
