--- a/sv-SE/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sv-SE/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL mottog ogiltig data i NPN-tillägg.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL-funktionen stöds inte i SSL 2.0-anslutningar.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL-funktionen stöds inte för servrar.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL-funktionen stöds inte för klienter.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL-versionsintervall är ogiltigt.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=Den andra SSL-parten valde en chiffersvit som är otillåten för den valda protokollversionen.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL mottog ett vanskapt Hello-Verify-Request-handskakningsmeddelande.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL mottog ett oväntat Hello-Verify-Request-handskakningsmeddelande.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=SSL-funktionen stöds inte av protokollversionen.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL mottog ett oväntat Certificate-Status-handskakningsmeddelande.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Hash-algoritmen stöds inte av TLS-parten.
+SSL_ERROR_DIGEST_FAILURE=Digest-funktionen misslyckades.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Felaktig signaturalgoritm anges i ett digitally-signed elementet.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Nästa protokollförhandlingstillägg aktiverades, men motringningen rensades innan den användes.\u0020
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Servern stödjer inga protokoll där klienten annonserar i ALPN-tillägget.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Servern avvisade en handskakning eftersom klienten nedgraderas till en lägre TLS-version som servern stöder.
 SEC_ERROR_IO=Ett I/O-fel uppstod under säkerhetsauktorisation.
 SEC_ERROR_LIBRARY_FAILURE=Fel i säkerhetsbibliotek.
 SEC_ERROR_BAD_DATA=Säkerhetsbibliotek: mottog skadad data.
