--- a/sv-SE/toolkit/chrome/global/resetProfile.properties
+++ b/sv-SE/toolkit/chrome/global/resetProfile.properties
@@ -8,3 +8,5 @@
 resetUnusedProfile.message=Du verkar inte ha startat %S på ett tag. Vill du städa ur den för att få uppleva den som när den var ny? Och välkommen tillbaka förresten!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Uppdatera %S…
+refreshProfile.resetButton.accesskey=U
