--- a/sv-SE/dom/chrome/layout/css.properties
+++ b/sv-SE/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Väntade sig en identifierare för extends-algoritmen, 
 PECounterASWeight=Varje värde i beskrivningen av symboler för numrerad lista måste vara mindre än den föregående värdet.\u0020
 PEClassSelEOF=klassnamn
 PEClassSelNotIdent=Väntade sig en identifierare för klasselektorn, men fann ”%1$S”.
+PECoordinatePair=Väntade sig ett koordinatpar, men fann '%1$S'.
 PETypeSelEOF=elementtyp
 PETypeSelNotType=Väntade sig ett elementnamn eller ”*”, men fann ”%1$S”.
 PEUnknownNamespacePrefix=Okänt namnrymdsprefix ”%1$S”.
