[ta] update from Pootle (firefox)

--- a/ta/dom/chrome/accessibility/AccessFu.properties
+++ b/ta/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    அழுத்தப்பட்டது
 stateExpanded    =    விரிவாக்கியது
 stateCollapsed   =    சரிந்துவிட்டன
 stateUnavailable =    கிடைக்கவில்லை
+stateReadonly    =    படிக்க மட்டும்
 stateRequired    =    அவசியம்
 stateTraversed   =    பார்வையிட்டது
 stateHasPopup    =    பாப் அப் உள்ளது
