[te] update from Pootle (firefox)

--- a/te/browser/chrome/browser/devtools/app-manager.properties
+++ b/te/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=భవిష్య విడుదలనందు అనువర్తన నిర్వాహిక తీసివేయబడును.  మీ ప్రోజెక్టులు WebIDE కు మైగ్రేట్ అయినవి.
+index.launchWebIDE=WebIDE దించు
+index.readMoreAboutWebIDE=మరింత చదువండి
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
 # the device's height, %3$S is the device's pixel density.
 # Example: 800x480 (86 DPI).
