--- a/te/browser/chrome/browser/downloads/downloads.properties
+++ b/te/browser/chrome/browser/downloads/downloads.properties
@@ -45,6 +45,9 @@ stateDirty=నిరోదించబడెను: వైరస్ లేదా
 # period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
 # this turns out to be longer than the other existing status strings.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=ఈ ఫైల్ వైరల్ లేదా మాల్‌వేర్ కలిగివుంది.
+blockedPotentiallyUnwanted=ఈ ఫైల్ మీ కంప్యూటర్‌కు హాని కలిగించవచ్చు.
+blockedUncommon=ఈ ఫైల్‌ను తెరవడం సురక్షితం కాకపోవచ్చు.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
@@ -54,6 +57,13 @@ stateDirty=నిరోదించబడెను: వైరస్ లేదా
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=మీరు ఖచ్చితంగా  ఈ  ఫైలును అడ్డుకోకూడదని అనుకుంటున్నారా?
+unblockTypeMalware=ఈ ఫైల్ మీ కంప్యూటర్‌కు హానికారకమైన వైరల్ లేదా ఇతర మాల్‌వేర్ కలిగివుంది.
+unblockTypePotentiallyUnwanted=ఉపయోగకరమైన దింపుకోలు అని చెప్పుకుంటున్న, ఈ ఫైల్, మీ ప్రోగ్రామ్లనందు మరియు అమరికలనందు అనుకోని మార్పులు చేయును.
+unblockTypeUncommon=ఈ ఫైల్ అనేది పరిచయంలేని మరియు ప్రమాదకరం అయ్యుండగల వెబ్‌సైట్ నుండి దించుకోబడింది కనుక దీనిని తెరవడం సురక్షితం కాదు.
+unblockTip=మీరు ప్రత్యామ్నాయ మూలం నుండి దించుకొనుటకు వెతకవచ్చు లేదా ఫైలును మరలా తరువాత దించుకొనుటకు ప్రయత్నించవచ్చు.
+unblockButtonContinue=ఏమైనాసరే అడ్డుతీసివేయి
+unblockButtonCancel=నన్ను సురక్షితంగా వుంచు
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
