--- a/te/browser/chrome/browser/places/places.properties
+++ b/te/browser/chrome/browser/places/places.properties
@@ -83,6 +83,8 @@ OrganizerQueryTags=టాగ్‌లు
 tagResultLabel=టాగ్
 bookmarkResultLabel=ఇష్టాంశము
 switchtabResultLabel=Tab
+keywordResultLabel=కీపదము
+searchengineResultLabel=వెతుకు
 
 
 # LOCALIZATION NOTE (lockPrompt.text)
