--- a/te/dom/chrome/accessibility/AccessFu.properties
+++ b/te/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    వత్తిన
 stateExpanded    =    విస్తరిత
 stateCollapsed   =    కూల్చిన
 stateUnavailable =    అందుబాటులోలేని
+stateReadonly    =    చదువుటకుమాత్రమే
 stateRequired    =    కావలసిన
 stateTraversed   =    వీక్షించిన
 stateHasPopup    =    పాప్ అప్ కలిగిన
