--- a/te/dom/chrome/layout/css.properties
+++ b/te/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=ఎక్స్‌టెండ్స్ సిస్ట
 PECounterASWeight=ఎడిక్టివ్-సింబల్ డిస్క్రిప్టర్ నందలి ప్రతి వెయిట్ కూడా గత వెయిట్ కన్నా చిన్నది కావాలి.
 PEClassSelEOF=తరిగతి పేరు
 PEClassSelNotIdent=తరగతి ఎంపికదారి కొరకు అనుకొన్నది గుర్తించుదానిని అయితే '%1$S' కనబడింది.
+PECoordinatePair=కోఆర్డినేట్ జత కావలసివుంది అయితే '%1$S' కనుగొంది.
 PETypeSelEOF=మూలకం రకం
 PETypeSelNotType=అనుకొన్నది మూలకం నామము లేదా '*' అయితే  '%1$S' కనబడింది.
 PEUnknownNamespacePrefix=తెలియని నేమ్ స్పేస్ ప్రిఫిక్సు  '%1$S'.
