--- a/te/browser/chrome/browser/devtools/timeline.properties
+++ b/te/browser/chrome/browser/devtools/timeline.properties
@@ -17,10 +17,12 @@ timeline.label=కాలరేఖ
 
 # LOCALIZATION NOTE (timeline.panelLabel):
 # This is used as the label for the toolbox panel.
+timeline.panelLabel=టైమ్‌లైన్ ప్యానల్
 
 # LOCALIZATION NOTE (timeline.tooltip):
 # This string is displayed in the tooltip of the tab when the timeline is
 # displayed inside the developer tools window.
+timeline.tooltip=పనితనం టైమ్‌లైన్
 
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
@@ -29,7 +31,11 @@ timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
+timeline.records=రికార్డ్స్
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=శైలిలు
+timeline.label.reflow=రీఫ్లో
+timeline.label.paint=చిత్రణ
+timeline.label.domevent=DOM ఘటన
