--- a/te/browser/chrome/browser/devtools/webide.properties
+++ b/te/browser/chrome/browser/devtools/webide.properties
@@ -19,6 +19,7 @@ importPackagedApp_title=సంచయం ఎంచుకోండి
 importHostedApp_title=హోస్టైన అనువర్తనం తెరు
 importHostedApp_header=మేనిఫెస్ట్ URL ప్రవేశపెట్టు
 
+notification_showTroubleShooting_label=సమస్యాపరిష్కారం
 notification_showTroubleShooting_accesskey=t
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
