--- a/te/toolkit/chrome/global/autocomplete.properties
+++ b/te/toolkit/chrome/global/autocomplete.properties
@@ -10,6 +10,8 @@ searchWithEngine = %S తో అన్వేషించు
 # %1$S is the search engine's name, %2$S is the search query.
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
+searchWithEngineForQuery = %2$S — %1$S తో వెతుకుము\u0020
 switchToTab = టాబ్‌కు మారుము
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
+visitURL = %S దర్శించు
