--- a/te/toolkit/chrome/global/charsetMenu.properties
+++ b/te/toolkit/chrome/global/charsetMenu.properties
@@ -64,6 +64,7 @@ ISO-8859-2.key   =       l
 ISO-8859-2       = మధ్య యూరోపియన్ (ISO)
 
 # Chinese, Simplified
+gbk.bis.key      =          S
 gbk.bis          = చైనీ, సరళీకృతం
 
 # Chinese, Traditional
