--- a/te/toolkit/chrome/global/resetProfile.properties
+++ b/te/toolkit/chrome/global/resetProfile.properties
@@ -8,3 +8,5 @@
 resetUnusedProfile.message=మీరు కొంత కాలంనుండి %S ను ప్రారంభించినట్లు లేరు. తాజా, మరియు కొత్త-దానివలె అనుభూతి పొందుటకు మీరు దానిని శుబ్రపరచాలని అనుకొంటున్నారా? మరియు, మీకు పునఃస్వాగతం!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=%S తాజాపరచు...
+refreshProfile.resetButton.accesskey=e
