[th] update from Pootle (firefox)

--- a/th/browser/chrome/browser/places/places.properties
+++ b/th/browser/chrome/browser/places/places.properties
@@ -75,16 +75,15 @@ OrganizerQueryDownloads=ดาวน์โหลด
 OrganizerQueryAllBookmarks=ที่คั่นหน้าทั้งหมด
 OrganizerQueryTags=แท็ก
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=ป้าย
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=ที่คั่นหน้า
+switchtabResultLabel=Tab
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
