--- a/th/dom/chrome/security/security.properties
+++ b/th/dom/chrome/security/security.properties
@@ -7,3 +7,5 @@ BlockMixedActiveContent = ปิดกั้นการโหลดเนื้
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=เว็บไซต์นี้ระบุเฮดเดอร์ Strict-Transport-Security ผิด
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
