--- a/th/browser/chrome/browser/browser.properties
+++ b/th/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=แสดง '%S'
 badContentBlocked.blocked.message=%S กำลังปิดกั้นเนื้อหาบนหน้านี้
 badContentBlocked.notblocked.message=%S ไม่ได้ปิดกั้นเนื้อหาใด ๆ บนหน้านี้
 
-# missing plugin installer
-installPlugin.message = คุณจะติดตั้งโปรแกรมเสริมที่ต้องใช้สำหรับการแสดงสื่อในหน้านี้หรือไม่?
-installPlugin.button.label=ติดตั้ง %S
-installPlugin.button.accesskey=ต
-installPlugin.ignoreButton.label=ไม่ต้องถามอีก
-installPlugin.ignoreButton.accesskey=ม
-
 crashedpluginsMessage.title=โปรแกรมเสริม %S ทำงานผิดพลาด
 crashedpluginsMessage.reloadButton.label=เรียกหน้าเว็บใหม่
 crashedpluginsMessage.reloadButton.accesskey=ร
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = ย
 
 getUserMedia.sharingMenu.label = แท็บที่ใช้ร่วมกับอุปกรณ์
 getUserMedia.sharingMenu.accesskey = อ
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -603,3 +601,8 @@ slowStartup.disableNotificationButton.accesskey = อ
 customizeTips.tip0 = %1$S: คุณสามารถปรับแต่ง %2$S เพื่อใช้ตามวิถีที่คุณต้องการ ง่าย ๆ แค่ลากรายการที่อยู่ข้างบนนี้ไปยังเมนูหรือแถบเครื่องมือ %3$S เกี่ยวกับการปรับแต่ง %2$S
 customizeTips.tip0.hint = บอกใบ้
 customizeTips.tip0.learnMore = เรียนรู้เพิ่ม
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
