--- a/th/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/th/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -98,5 +98,9 @@ quit-button.tooltiptext.linux2 = ออกจาก %1$S (%2$S)
 quit-button.tooltiptext.mac = ออกจาก %1$S (%2$S)
 
 
-loop-call-button.label = เชิญบางคนเพื่อการสนทนา
-loop-call-button.tooltiptext = เชิญบางคนเพื่อการสนทนา
+
+
+web-apps-button.label = แอป
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
